<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>net.sf.taverna.t2</groupId>
		<artifactId>taverna-workbench</artifactId>
		<version>2.5.0</version>
	</parent>
	<groupId>net.sf.taverna.t2</groupId>
	<artifactId>taverna-javadocs</artifactId>
	<name>Taverna Javadocs</name>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<finalName>taverna-javadocs-${project.version}</finalName>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.7</source>
							<target>1.7</target>
						</configuration>
					</plugin>
					<!--
						This bit will be executed as part of the usual mvn install command
					-->
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.7</version>
						<executions>
							<execution>
								<id>javadoc-jar</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<source>1.7</source>
									<!-- Max heap and permanent generation space size -->
									<additionalJOption>-J-Xmx1024m -J-XX:MaxPermSize=1024m</additionalJOption>
									<includeDependencySources>true</includeDependencySources>
									<dependencySourceIncludes>
										<dependencySourceInclude>net.sf.taverna*</dependencySourceInclude>
										<dependencySourceInclude>uk.org.taverna*</dependencySourceInclude>
										<dependencySourceInclude>org.purl.wf4ever*</dependencySourceInclude>
										<dependencySourceInclude>org.fife.ui.hex*</dependencySourceInclude>
										<dependencySourceInclude>org.jdesktop*</dependencySourceInclude>
										<!-- 
										<dependencySourceInclude>uk.org.mygrid*</dependencySourceInclude>
										<dependencySourceInclude>org.biomart*</dependencySourceInclude>
										-->
									</dependencySourceIncludes>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>net.sf.taverna.t2.taverna-workbench</groupId>
					<artifactId>workbench-plugin</artifactId>
					<version>${project.version}</version>
				</dependency>
				<dependency>
					<groupId>net.sf.taverna.t2.taverna-workbench</groupId>
					<artifactId>taverna-product-common</artifactId>
					<version>${project.version}</version>
				</dependency>
				<dependency>
					<groupId>net.sf.taverna.t2.taverna-workbench.plugins</groupId>
					<artifactId>activities-plugin</artifactId>
					<version>${project.version}</version>
					<exclusions>
						<exclusion>
							<artifactId>axis-wss4j</artifactId>
							<groupId>axis</groupId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>net.sf.taverna.t2.taverna-workbench.plugins</groupId>
					<artifactId>provenanceconnectors-plugin</artifactId>
					<version>${project.version}</version>
				</dependency>
				<dependency>
					<groupId>net.sf.taverna.t2.taverna-workbench.plugins</groupId>
					<artifactId>translators-plugin</artifactId>
					<version>${project.version}</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>
